[gd_scene load_steps=29 format=3 uid="uid://crhqy1nagymqg"]

[ext_resource type="Script" path="res://scenes/game/characters/bomb/bomb.gd" id="1_m3y8p"]
[ext_resource type="Texture2D" uid="uid://c0bl6eg8pfytt" path="res://art/bomb.png" id="2_ifk8k"]
[ext_resource type="Texture2D" uid="uid://db6y22jiyucfn" path="res://art/explosions/Explosion4/0005.png" id="7_jdvms"]
[ext_resource type="Texture2D" uid="uid://c20gxi8h4q425" path="res://art/explosions/Explosion4/0006.png" id="8_a1mhg"]
[ext_resource type="Texture2D" uid="uid://6pa15wq02sid" path="res://art/explosions/Explosion4/0007.png" id="9_333f0"]
[ext_resource type="Texture2D" uid="uid://bw22blkly7x52" path="res://art/explosions/Explosion4/0008.png" id="10_m16r7"]
[ext_resource type="Texture2D" uid="uid://c72oueo7fdd7h" path="res://art/explosions/Explosion4/0009.png" id="11_4rfvc"]
[ext_resource type="Texture2D" uid="uid://jovc03jmjv3y" path="res://art/explosions/Explosion4/0010.png" id="12_f44kc"]
[ext_resource type="Texture2D" uid="uid://ba2c33e0bsyj0" path="res://art/explosions/Explosion4/0011.png" id="13_1j24a"]
[ext_resource type="Texture2D" uid="uid://5t724aspk2gs" path="res://art/explosions/Explosion4/0012.png" id="14_derlq"]
[ext_resource type="Texture2D" uid="uid://d0io8g2elswkj" path="res://art/explosions/Explosion4/0013.png" id="15_2xv0t"]
[ext_resource type="Texture2D" uid="uid://bgk2ekkikslj1" path="res://art/explosions/Explosion4/0014.png" id="16_ac28r"]
[ext_resource type="Texture2D" uid="uid://bgphhpv6pat3n" path="res://art/explosions/Explosion4/0015.png" id="17_dkake"]
[ext_resource type="Texture2D" uid="uid://d3wqghvy14878" path="res://art/explosions/Explosion4/0016.png" id="18_ctsgl"]
[ext_resource type="Texture2D" uid="uid://nlnp1n7843py" path="res://art/explosions/Explosion4/0017.png" id="19_q6k26"]
[ext_resource type="Texture2D" uid="uid://c0o0rc3iqwrot" path="res://art/explosions/Explosion4/0018.png" id="20_wb1uq"]
[ext_resource type="Texture2D" uid="uid://d4dienv30kdwe" path="res://art/explosions/Explosion4/0019.png" id="21_bce6b"]
[ext_resource type="Texture2D" uid="uid://fk18ntw3h6cq" path="res://art/explosions/Explosion4/0020.png" id="22_aevq6"]
[ext_resource type="Texture2D" uid="uid://crq75vy0gmmog" path="res://art/explosions/Explosion4/0021.png" id="23_ifesm"]
[ext_resource type="AudioStream" uid="uid://bjrv34k018hya" path="res://art/fx/falling-bomb.mp3" id="24_e1wbn"]
[ext_resource type="Texture2D" uid="uid://ctsuondfu6lm1" path="res://art/explosions/Explosion4/0022.png" id="24_kx8eg"]
[ext_resource type="Texture2D" uid="uid://cm0bv7j4gq3mg" path="res://art/explosions/Explosion4/0023.png" id="25_u8lqp"]
[ext_resource type="AudioStream" uid="uid://dq4x8x7garkai" path="res://art/fx/hq-explosion-6288.mp3" id="25_y58q3"]
[ext_resource type="Texture2D" uid="uid://d2fkb5oo6udgt" path="res://art/explosions/Explosion4/0024.png" id="26_doxh6"]
[ext_resource type="Texture2D" uid="uid://csasd6gvwphjf" path="res://art/explosions/Explosion4/0025.png" id="27_08i5h"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dtk06"]
radius = 138.462

[sub_resource type="SpriteFrames" id="SpriteFrames_a0kei"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_jdvms")
}, {
"duration": 1.0,
"texture": ExtResource("8_a1mhg")
}, {
"duration": 1.0,
"texture": ExtResource("9_333f0")
}, {
"duration": 1.0,
"texture": ExtResource("10_m16r7")
}, {
"duration": 1.0,
"texture": ExtResource("11_4rfvc")
}, {
"duration": 1.0,
"texture": ExtResource("12_f44kc")
}, {
"duration": 1.0,
"texture": ExtResource("13_1j24a")
}, {
"duration": 1.0,
"texture": ExtResource("14_derlq")
}, {
"duration": 1.0,
"texture": ExtResource("15_2xv0t")
}, {
"duration": 1.0,
"texture": ExtResource("16_ac28r")
}, {
"duration": 1.0,
"texture": ExtResource("17_dkake")
}, {
"duration": 1.0,
"texture": ExtResource("18_ctsgl")
}, {
"duration": 1.0,
"texture": ExtResource("19_q6k26")
}, {
"duration": 1.0,
"texture": ExtResource("20_wb1uq")
}, {
"duration": 1.0,
"texture": ExtResource("21_bce6b")
}, {
"duration": 1.0,
"texture": ExtResource("22_aevq6")
}, {
"duration": 1.0,
"texture": ExtResource("23_ifesm")
}, {
"duration": 1.0,
"texture": ExtResource("24_kx8eg")
}, {
"duration": 1.0,
"texture": ExtResource("25_u8lqp")
}, {
"duration": 1.0,
"texture": ExtResource("26_doxh6")
}, {
"duration": 1.0,
"texture": ExtResource("27_08i5h")
}],
"loop": false,
"name": &"default",
"speed": 11.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_havja"]
radius = 11.5385

[node name="Bomb" type="RigidBody2D"]
collision_layer = 2
collision_mask = 5
gravity_scale = 0.2
max_contacts_reported = 4
contact_monitor = true
lock_rotation = true
script = ExtResource("1_m3y8p")

[node name="BombSprite" type="Sprite2D" parent="."]
position = Vector2(3, -5.96046e-08)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_ifk8k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(0.13, 0.13)
shape = SubResource("CircleShape2D_dtk06")

[node name="ExplosionAnimatedSprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(1.3113, 1.3113)
sprite_frames = SubResource("SpriteFrames_a0kei")
frame = 20
frame_progress = 1.0

[node name="UnspawnTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
scale = Vector2(-1.56, -1.48)
shape = SubResource("CircleShape2D_havja")

[node name="FallingFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("24_e1wbn")
pitch_scale = 0.6
max_distance = 1000.0
attenuation = 2.46229
area_mask = 4

[node name="ExplodeFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("25_y58q3")
volume_db = -4.0
max_distance = 1000.0
attenuation = 2.21914
bus = &"SoundFX"
area_mask = 4

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="tree_entered" from="." to="." method="_on_tree_entered"]
[connection signal="timeout" from="UnspawnTimer" to="." method="_on_unspawn_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
